<resources>
    <string name="app_name">Basics</string>
    <string name="tv_main_title">Android Basics</string>
    <string name="btn_calc_text">Calculator</string>
    <string name="btn_exit_text">Exit App</string>
    <string name="btn_game_text">Game</string>
    <string name="btn_rates_text">Crypto currency</string>

    <string name="btn_calc_0">0</string>
    <string name="btn_calc_1">1</string>
    <string name="btn_calc_2">2</string>
    <string name="btn_calc_3">3</string>
    <string name="btn_calc_4">4</string>
    <string name="btn_calc_5">5</string>
    <string name="btn_calc_6">6</string>
    <string name="btn_calc_7">7</string>
    <string name="btn_calc_8">8</string>
    <string name="btn_calc_9">9</string>

    <string name="btn_calc_percent">%</string>
    <string name="btn_calc_clearE">CE</string>
    <string name="btn_calc_clearAll">C</string>
    <string name="btn_calc_backspace">\u232B</string>

    <string name="btn_calc_inverse">\u00b9\u2044\u2093</string>
    <string name="btn_calc_square">x\u00B2</string>
    <string name="btn_calc_sqrt">\u221A\u2093</string>
    <string name="btn_calc_divide">\u00F7</string>
    <string name="btn_calc_multiplication">\u00D7</string>
    <string name="btn_calc_minus">\u2212</string>
    <string name="btn_calc_plus">\u002B</string>
    <string name="btn_calc_plus_minus">\u207A\u2215\u208B</string>
    <string name="btn_calc_comma">,</string>
    <string name="btn_calc_dot">.</string>
    <string name="btn_calc_equal">\uFF1D</string>

    <string name="invalid_sqrt">Invalid sqrt!</string>
    <string name="division_by_zero">Division by zero!</string>

    <!-- Game Activity -->
    <string name="game_title">2048</string>
    <string name="game_tile_2">2</string>
    <string name="game_tile_4">4</string>
    <string name="game_tile_8">8</string>
    <string name="game_tile_16">16</string>
    <string name="game_tile_32">32</string>
    <string name="game_tile_64">64</string>
    <string name="game_tile_128">128</string>
    <string name="game_tile_256">256</string>
    <string name="game_tile_512">512</string>
    <string name="game_tile_1024">1024</string>
    <string name="game_tile_2048">2048</string>
    <string name="game_tile_4096">4096</string>
    <string name="game_tile_8192">8192</string>
    <string name="game_tile_16184">16184</string>
    <string name="game_tile_32368">32368</string>
    <string name="game_btn_new_text">NEW</string>
    <string name="game_btn_undo_text">UNDO</string>
    <string name="game_score_pattern">SCORE\n%d</string>
    <string name="game_best_score_pattern">BEST\n%d</string>
    <string name="game_victory_title">Win</string>
    <string name="game_victory_message">You gathered 2048</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_new_game">New Game</string>
    <string name="in_development">In development</string>
    <string name="game_over_title">Game Over</string>
    <string name="game_over_message">You lost</string>

    <!-- Rates Activity -->
    <string name="tv_rates_title">Crypto currency rates</string>

    <!-- Chat Activity -->
    <string name="chat_api_url">https://diorama-chat.ew.r.appspot.com/story</string>
    <string name="chat_user_name_title">Name:</string>
    <string name="chat_default_user">username</string>
    <string name="chat_message_title">message:</string>
    <string name="chat_default_message">hi</string>
    <string name="btn_send_message">Send</string>

    <string name="btn_chat_text">Chat</string>

</resources>