<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalcActivity"
    android:background="@color/calc_layout_bg">
    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:gravity="end"
        android:textSize="20sp"
        android:textColor="@color/calc_history_text"
        tools:text="5 + 5 =" />
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="end"
        android:textSize="60sp"
        tools:text="10"
        android:textColor="@color/calc_result_text"
        tools:textFontWeight="700" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_percent"
                style="@style/FunctionalCalcButton"
                android:text="@string/btn_calc_percent" />

            <Button
                android:id="@+id/button_CE"
                style="@style/FunctionalCalcButton"
                android:text="@string/btn_calc_clearE" />

            <Button
                android:id="@+id/button_C"
                style="@style/FunctionalCalcButton"
                android:text="@string/btn_calc_clearAll" />

            <Button
                android:id="@+id/button_backspace"
                style="@style/FunctionalCalcButton"
                android:text="@string/btn_calc_backspace" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/button_inverse"
                style="@style/FunctionalCalcButton"
                android:text="@string/btn_calc_inverse" />

            <Button
                android:id="@+id/button_square"
                style="@style/FunctionalCalcButton"
                android:text="@string/btn_calc_square" />

            <Button
                android:id="@+id/button_sqrt"
                style="@style/FunctionalCalcButton"
                android:text="@string/btn_calc_sqrt" />

            <Button
                android:id="@+id/button_divide"
                style="@style/FunctionalCalcButton"
                android:text="@string/btn_calc_divide" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/button_digit_7"
                style="@style/DigitCalcButton"
                android:text="@string/btn_calc_7" />
            <Button
                android:id="@+id/button_digit_8"
                style="@style/DigitCalcButton"
                android:text="@string/btn_calc_8" />
            <Button
                android:id="@+id/button_digit_9"
                style="@style/DigitCalcButton"
                android:text="@string/btn_calc_9" />
            <Button
                android:id="@+id/button_multiplication"
                style="@style/FunctionalCalcButton"
                android:text="@string/btn_calc_multiplication" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_digit_4"
                style="@style/DigitCalcButton"
                android:text="@string/btn_calc_4" />
            <Button
                android:id="@+id/button_digit_5"
                style="@style/DigitCalcButton"
                android:text="@string/btn_calc_5" />
            <Button
                android:id="@+id/button_digit_6"
                style="@style/DigitCalcButton"
                android:text="@string/btn_calc_6" />
            <Button
                android:id="@+id/button_minus"
                style="@style/FunctionalCalcButton"
                android:text="@string/btn_calc_minus" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_digit_1"
                style="@style/DigitCalcButton"
                android:text="@string/btn_calc_1" />
            <Button
                android:id="@+id/button_digit_2"
                style="@style/DigitCalcButton"
                android:text="@string/btn_calc_2" />
            <Button
                android:id="@+id/button_digit_3"
                style="@style/DigitCalcButton"
                android:text="@string/btn_calc_3" />
            <Button
                android:id="@+id/button_plus"
                style="@style/FunctionalCalcButton"
                android:text="@string/btn_calc_plus" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_plus_minus"
                style="@style/DigitCalcButton"
                android:text="@string/btn_calc_plus_minus" />
            <Button
                android:id="@+id/button_digit_0"
                style="@style/DigitCalcButton"
                android:text="@string/btn_calc_0" />
            <Button
                android:id="@+id/button_comma"
                style="@style/DigitCalcButton"
                android:text="@string/btn_calc_comma" />
            <Button
                android:id="@+id/button_equal"
                style="@style/EqualCalcButton"
                android:text="@string/btn_calc_equal" />
        </TableRow>
    </TableLayout>

</LinearLayout>